# jupyenv

./: flake.nix  pyproject.toml
docs/documentation/: how-to.md
examples/python/native/: default.nix
examples/python/science/: default.nix
modules/kernels/bash/: pyproject.toml
modules/kernels/c/: pyproject.toml
modules/kernels/dotnet/: default.nix  package.nix
modules/kernels/elm/: pyproject.toml
modules/kernels/nix/: default.nix
modules/kernels/postgres/: pyproject.toml
modules/kernels/python/: pyproject.toml
modules/kernels/zsh/: pyproject.toml
modules/types/: poetry.nix
template/: flake.nix
