[tool.poetry]
name = "jupyter-nix"
version = "0.1.0"
description = "Declarative and reproducible Jupyter environments - powered by Nix"
authors = []

[tool.poetry.dependencies]
python = "^3.12"

[tool.poetry.dev-dependencies]
testbook = "*"
jupyterlab = "4.3.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
